--- a/404.html
+++ b/404.html
@@ -1,1 +1,24 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/miniso/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Miniso Fashion Store - Your one-stop shop for fashion"/><link rel="apple-touch-icon" href="/miniso/logo192.png"/><link rel="manifest" href="/miniso/manifest.json"/><title>Miniso Fashion Store</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><script defer="defer" src="/miniso/static/js/main.e8e239cd.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting...</title>
+    <script>
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      var pathSegmentsToKeep = 1;
+      var l = window.location;
+      var r = l.pathname.split('/').slice(1);
+      var s = r.slice(0, pathSegmentsToKeep).join('/') + '/';
+      var i = l.href.indexOf(s);
+      var base = l.href.slice(0, i + s.length);
+      window.history.replaceState(null, null, base + '?' + l.search + l.hash);
+    </script>
+  </head>
+  <body>
+    <noscript>
+      <h1>Redirecting...</h1>
+    </noscript>
+  </body>
+</html> 
